using reference for package name

--- a/src/web_traffic_monitor/CONFIG.json
+++ b/src/web_traffic_monitor/CONFIG.json
@@ -17,7 +17,7 @@
         "method": {
             "name": "join_Path",
             "kwargs": {
-                "path": "web_traffic_monitor.db"
+                "path": "{{package.name}}.db"
             }
         }       
     },
