redesigning for client/config

--- a/src/web_traffic_monitor/CONFIG.json
+++ b/src/web_traffic_monitor/CONFIG.json
@@ -1,6 +1,6 @@
 {
 
-    "db_path":"{{data.Dir}}/{{package_name}}.db",
+    "db_path":"{{data.Dir}}/{{package.name}}.db",
     "db_connection_module": "sqlite",
 
     "db_conn_kwargs" : {
