--- a/setup.cfg
+++ b/setup.cfg
@@ -25,7 +25,11 @@ install_requires =
     kabbes_py_starter
     kabbes_parent_class
     kabbes_dir_ops
-
+    flask
+    kabbes_client
+    pandas
+    kabbes_menu
+    kabbes_nanoid
 
 [options.packages.find]
 where = src
