--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,7 @@ install_requires =
     pandas
     kabbes_menu
     kabbes_nanoid
+    kabbes_database_connections
 
 [options.packages.find]
 where = src
