prepping for release

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,13 @@
 [metadata]
-name = kabbes_web_traffic_monitor
+name = web_traffic_monitor
 version = 0.2.0
 author = James Kabbes
-author_email = james.kabbes@gmail.com
-description = System for tracking web traffic
+description = Basic system for tracking website visits and redirecting urls
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://pypi.org/project/kabbes-web-traffic-monitor/
+url = https://pypi.org/project/web-traffic-monitor/
 project_urls =
-    GitHub = https://github.comjameskabbes/web_traffic_monitor
+    GitHub = https://github.com/jameskabbes/web_traffic_monitor
     Documentation = https://jameskabbes.github.io/web_traffic_monitor
 classifiers =
     Programming Language :: Python :: 3
@@ -21,7 +20,6 @@ package_dir =
 packages =
     web_traffic_monitor
 python_requires = >=3.7
-install_requires = 
 
 [options.packages.find]
 where = src
