finding packages on build

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,8 +17,7 @@ classifiers =
 [options]
 package_dir =
     = src
-packages =
-    web_traffic_monitor
+packages = find:
 python_requires = >=3.7
 
 [options.packages.find]
